update get analysis results endpoint
